[Gold II] Title: 보석 도둑, Time: 2348 ms, Memory: 334212 KB -BaekjoonHub